--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "classnames": "^2.3.1",
+    "rc-menu": "^9.0.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-feather": "^2.0.9",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
+    "use-onclickoutside": "^0.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
